atualização de formulario

--- a/cadastro.html
+++ b/cadastro.html
@@ -13,32 +13,23 @@
 
         <h2>Cadastre-se</h2>
         
-        <form method="post" action="#">
+        <form method="post" action="cadastro.php">
             <div class="user-box">
                 <input type="text" name="nome" required>
                 <label >Nome</label>
-            </div>
-            <div class="user-box">
-                <input type="text" name="sobrenome" required>
-                <label >Sobrenome</label>
-            </div>
-            <div class="user-box">
-                <input type="text" name="endereco" required>
-                <label >Endereco</label>
             </div>
             <div class="user-box">
                 <input type="text" name="email" required>
                 <label >Email</label>
             </div>
             <div class="user-box">
-                <input type="text" name="Telefone" required>
-                <label >Telefone</label>
+                <input type="text" name="endereco" required>
+                <label >Endereco</label>
             </div>
             <div class="user-box">
                 <input type="password" name="senha" required>
                 <label>Senha</label>
             </div>
-        
             <div class="btn">
                 <input type="submit" value="Cadastrar">
             </div>
