Pagina de login

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 <h2>Login</h2>
 
-<form method="post" action="#">
+<form method="post" action="login.php">
     <div class="user-box">
         <input type="text" name="email" required>
         <label >Email</label>
