Implementação de Navbar

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
+    <nav id="navbar">
+        <div id="navbar-container">
+            <h1 class="logo">Sistema de Cadastro</h1>
+            <ul id="navbar-items">
+                <li><a href="/login.html">Login</a></li>
+                <li><a href="/cadastro.html">Cadastro</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="cad-box">
 
         <h2>Cadastre-se</h2>
