--- a/login.html
+++ b/login.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     
+    <nav id="navbar">
+        <div id="navbar-container">
+            <h1 class="logo">Sistema de Cadastro</h1>
+            <ul id="navbar-items">
+                <li><a href="/login.html">Login</a></li>
+                <li><a href="/cadastro.html">Cadastro</a></li>
+            </ul>
+        </div>
+    </nav>
+
 <div class="login-box">
 
 <h2>Login</h2>
@@ -24,7 +34,7 @@
     </div>
 
     <div class="btn">
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Entrar">
     </div>
 
 </form>
