Alteração de espaçamento

--- a/login.html
+++ b/login.html
@@ -25,16 +25,18 @@
 
 <form method="post" action="login.php">
     <div class="user-box">
-        <input type="text" name="email" required>
         <label >Email</label>
+        <br>
+        <input type="text" name="email" required>
     </div>
     <div class="user-box">
-        <input type="password" name="senha" required>
         <label>Senha</label>
+        <br>
+        <input type="password" name="senha" required>
     </div>
 
     <div class="btn">
-        <input type="submit" value="Entrar">
+        <input type="submit" value="Entrar" name="submit" id="submit">
     </div>
 
 </form>
