--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,39 +8,27 @@
     <link rel="stylesheet" href="/css/login.css">
     <title>Login</title>
 </head>
+
 <body>
-    
     <nav id="navbar">
         <div id="navbar-container">
             <h1 class="logo">Sistema de Cadastro</h1>
             <ul id="navbar-items">
                 <li><a href="/index.html">Login</a></li>
-                <li><a href="/cadastro.html">Cadastro</a></li>
+                <li><a href="/cadastro.php">Cadastro</a></li>
             </ul>
         </div>
     </nav>
 
-<div class="login-box">
-
-<h2>Login</h2>
-
-<form method="post" action="login.php">
-    <div class="user-box">
-        <label >Email</label>
-        <br>
-        <input type="text" name="email" required>
+    <div class="login-box">
+        <h2>Login</h2>
+        <input type="text" placeholder="Email" name="email" required>
+        <br><br>
+        <input type="password" placeholder="Senha" name="senha" required>
+        <div class="btn">
+            <br>
+            <input type="submit" value="Entrar" name="submit" id="submit">
+        </div>
     </div>
-    <div class="user-box">
-        <label>Senha</label>
-        <br>
-        <input type="password" name="senha" required>
-    </div>
-
-    <div class="btn">
-        <input type="submit" value="Entrar" name="submit" id="submit">
-    </div>
-
-</form>
-
 </body>
 </html>
