--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/cadastro.css">
-    <title>Cadastre-se</title>
+    <title>Cadastro</title>
 </head>
 <body>
 
@@ -20,35 +20,33 @@
     </nav>
 
     <div class="cad-box">
-
         <h2>Cadastre-se</h2>
-        
         <form method="post" action="cadastro.php">
             <div class="user-box">
-                <label >Nome</label>
-                <br>
-                <input type="text" name="nome" id="nome"required>
+                <input type="text" name="nome" id="nome" class="input-user" required >
+                <label for="nome" class="label-input">Nome</label>
             </div>
+            <br><br>
             <div class="user-box">
-                <label >Email</label>
-                <br>
-                <input type="text" name="email" id="email"required>
+                <input type="text" name="cpf" id="cpf" class="input-user" required >
+                <label for="cpf" class="label-input">CPF</label>
             </div>
+            <br><br>
             <div class="user-box">
-                <label >Endereco</label>
-                <br>
-                <input type="text" name="endereco" id="endereco" required>
+                <input type="text" name="email" id="email" class="input-user" required >
+                <label for="email" class="label-input">Email</label>
             </div>
+            <br><br>
             <div class="user-box">
-                <label>Senha</label>
-                <br>
-                <input type="password" name="senha" id="senha" required>
+                <input type="text" name="telefone" id="telefone" class="input-user" required >
+                <label for="telefone " class="label-input">Telefone</label>
             </div>
-            <div class="btn">
+            <br>
+            <label for="dataNasc">Data de Nascimento:</label>
+            <input type="date" name="dataNasc" id="dataNasc" required >
+            <br><br>
                 <input type="submit" value="Cadastrar" name="submit" id="submit">
-            </div>
         </form>
     </div>
-    
 </body>
 </html>
