Adição do campo de senha no cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -41,8 +41,13 @@
                 <input type="text" name="telefone" id="telefone" class="input-user" required >
                 <label for="telefone " class="label-input">Telefone</label>
             </div>
+            <br><br>
+            <div class="user-box">
+                <input type="password" name="senha" id="senha" class="input-user" required >
+                <label for="senha" class="label-input">Senha</label>
+            </div>
             <br>
-            <label for="dataNasc">Data de Nascimento:</label>
+             <label for="dataNasc">Data de Nascimento:</label>
             <input type="date" name="dataNasc" id="dataNasc" required >
             <br><br>
                 <input type="submit" value="Cadastrar" name="submit" id="submit">
