--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
         <div id="navbar-container">
             <h1 class="logo">Sistema de Cadastro</h1>
             <ul id="navbar-items">
-                <li><a href="/index.html">Login</a></li>
+                <li><a href="/login.html">Login</a></li>
                 <li><a href="/cadastro.html">Cadastro</a></li>
             </ul>
         </div>
