--- a/cadastro.html
+++ b/cadastro.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cadastro.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/cadastro.css">
     <title>Cadastro</title>
 </head>
 <body>
@@ -13,8 +11,8 @@
         <div id="navbar-container">
             <h1 class="logo">Sistema de Cadastro</h1>
             <ul id="navbar-items">
-                <li><a href="/login.html">Login</a></li>
-                <li><a href="/cadastro.html">Cadastro</a></li>
+                <li><a href="/login.php">Login</a></li>
+                <li><a href="/cadastro.php">Cadastro</a></li>
             </ul>
         </div>
     </nav>
