Direcionamento de paginas

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,8 +11,8 @@
         <div id="navbar-container">
             <h1 class="logo">Sistema de Cadastro</h1>
             <ul id="navbar-items">
-                <li><a href="/login.php">Login</a></li>
-                <li><a href="/cadastro.php">Cadastro</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
         </div>
     </nav>
