--- a/cadastro.html
+++ b/cadastro.html
@@ -13,6 +13,7 @@
             <ul id="navbar-items">
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="home.php">Voltar</a></li>
             </ul>
         </div>
     </nav>
