--- a/login.html
+++ b/login.html
@@ -23,12 +23,14 @@
 
     <div class="login-box">
         <h2>Login</h2>
+        <form action="login.php" method="post">
         <input type="text" placeholder="Email" name="email" required>
         <br><br>
         <input type="password" placeholder="Senha" name="senha" required>
         <div class="btn">
             <br>
             <input type="submit" value="Entrar" name="submit" id="submit">
+        </form>
         </div>
     </div>
 </body>
